[gd_scene load_steps=7 format=2]

[ext_resource path="res://MetaBoy/spritesheets_og/Body/Schoolboy.png" type="Texture" id=1]
[ext_resource path="res://MetaBoy/Layers.gd" type="Script" id=4]
[ext_resource path="res://MetaBoy/MetaBoy.gd" type="Script" id=5]

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("MainBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 5 ]
}

[sub_resource type="Animation" id=5]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MainBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=7]
length = 1.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("MainBody:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}

[node name="MetaBoy" type="Node2D"]
script = ExtResource( 5 )

[node name="MainBody" type="Node2D" parent="."]
script = ExtResource( 4 )
frame = 5

[node name="Back" type="Sprite" parent="MainBody"]
hframes = 5
vframes = 3
frame = 5

[node name="Body" type="Sprite" parent="MainBody"]
texture = ExtResource( 1 )
hframes = 5
vframes = 3
frame = 5

[node name="Body2" type="Sprite" parent="MainBody"]
hframes = 5
vframes = 3
frame = 5

[node name="Face" type="Sprite" parent="MainBody"]
hframes = 5
vframes = 3
frame = 5

[node name="Hat" type="Sprite" parent="MainBody"]
hframes = 5
vframes = 3
frame = 5

[node name="Waist" type="Sprite" parent="MainBody"]
hframes = 5
vframes = 3
frame = 5

[node name="Neck" type="Sprite" parent="MainBody"]
hframes = 5
vframes = 3
frame = 5

[node name="Weapon" type="Sprite" parent="MainBody"]
hframes = 5
vframes = 3
frame = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/idle = SubResource( 5 )
anims/run = SubResource( 7 )
